versions/0.8.1/_sources/refs/_aws-cdk_aws-elasticache.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"zNFkKJTisMIaMn8oRNOxx/YnLf6oEfwfnZVH9x6c10U="}

@aws-cdk/aws-elasticache
========================

.. tabs::

   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/elasticache/0.8.1/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:elasticache:jar:0.8.1'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="elasticache" rev="0.8.1"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>elasticache</artifactId>
           <version>0.8.1</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:elasticache:0.8.1'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='elasticache', version='0.8.1')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-elasticache/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-elasticache@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-elasticache": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-elasticache@0.8.1


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-elasticache/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-elasticache@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-elasticache": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-elasticache@0.8.1



.. mdinclude:: ./__aws-cdk_aws-elasticache.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-elasticache

CacheClusterConfigurationEndpointAddress
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CacheClusterConfigurationEndpointAddress([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticache.CacheClusterConfigurationEndpointAddress;

      .. code-tab:: javascript

         const { CacheClusterConfigurationEndpointAddress } = require('@aws-cdk/aws-elasticache');

      .. code-tab:: typescript

         import { CacheClusterConfigurationEndpointAddress } from '@aws-cdk/aws-elasticache';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

CacheClusterConfigurationEndpointPort
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CacheClusterConfigurationEndpointPort([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticache.CacheClusterConfigurationEndpointPort;

      .. code-tab:: javascript

         const { CacheClusterConfigurationEndpointPort } = require('@aws-cdk/aws-elasticache');

      .. code-tab:: typescript

         import { CacheClusterConfigurationEndpointPort } from '@aws-cdk/aws-elasticache';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

CacheClusterRedisEndpointAddress
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CacheClusterRedisEndpointAddress([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticache.CacheClusterRedisEndpointAddress;

      .. code-tab:: javascript

         const { CacheClusterRedisEndpointAddress } = require('@aws-cdk/aws-elasticache');

      .. code-tab:: typescript

         import { CacheClusterRedisEndpointAddress } from '@aws-cdk/aws-elasticache';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

CacheClusterRedisEndpointPort
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CacheClusterRedisEndpointPort([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticache.CacheClusterRedisEndpointPort;

      .. code-tab:: javascript

         const { CacheClusterRedisEndpointPort } = require('@aws-cdk/aws-elasticache');

      .. code-tab:: typescript

         import { CacheClusterRedisEndpointPort } from '@aws-cdk/aws-elasticache';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

ReplicationGroupConfigurationEndPointAddress
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: ReplicationGroupConfigurationEndPointAddress([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticache.ReplicationGroupConfigurationEndPointAddress;

      .. code-tab:: javascript

         const { ReplicationGroupConfigurationEndPointAddress } = require('@aws-cdk/aws-elasticache');

      .. code-tab:: typescript

         import { ReplicationGroupConfigurationEndPointAddress } from '@aws-cdk/aws-elasticache';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

ReplicationGroupConfigurationEndPointPort
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: ReplicationGroupConfigurationEndPointPort([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticache.ReplicationGroupConfigurationEndPointPort;

      .. code-tab:: javascript

         const { ReplicationGroupConfigurationEndPointPort } = require('@aws-cdk/aws-elasticache');

      .. code-tab:: typescript

         import { ReplicationGroupConfigurationEndPointPort } from '@aws-cdk/aws-elasticache';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

ReplicationGroupPrimaryEndPointAddress
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: ReplicationGroupPrimaryEndPointAddress([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticache.ReplicationGroupPrimaryEndPointAddress;

      .. code-tab:: javascript

         const { ReplicationGroupPrimaryEndPointAddress } = require('@aws-cdk/aws-elasticache');

      .. code-tab:: typescript

         import { ReplicationGroupPrimaryEndPointAddress } from '@aws-cdk/aws-elasticache';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

ReplicationGroupPrimaryEndPointPort
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: ReplicationGroupPrimaryEndPointPort([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticache.ReplicationGroupPrimaryEndPointPort;

      .. code-tab:: javascript

         const { ReplicationGroupPrimaryEndPointPort } = require('@aws-cdk/aws-elasticache');

      .. code-tab:: typescript

         import { ReplicationGroupPrimaryEndPointPort } from '@aws-cdk/aws-elasticache';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

ReplicationGroupReadEndPointAddresses
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: ReplicationGroupReadEndPointAddresses([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticache.ReplicationGroupReadEndPointAddresses;

      .. code-tab:: javascript

         const { ReplicationGroupReadEndPointAddresses } = require('@aws-cdk/aws-elasticache');

      .. code-tab:: typescript

         import { ReplicationGroupReadEndPointAddresses } from '@aws-cdk/aws-elasticache';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

ReplicationGroupReadEndPointAddressesList
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: ReplicationGroupReadEndPointAddressesList([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticache.ReplicationGroupReadEndPointAddressesList;

      .. code-tab:: javascript

         const { ReplicationGroupReadEndPointAddressesList } = require('@aws-cdk/aws-elasticache');

      .. code-tab:: typescript

         import { ReplicationGroupReadEndPointAddressesList } from '@aws-cdk/aws-elasticache';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

ReplicationGroupReadEndPointPorts
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: ReplicationGroupReadEndPointPorts([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticache.ReplicationGroupReadEndPointPorts;

      .. code-tab:: javascript

         const { ReplicationGroupReadEndPointPorts } = require('@aws-cdk/aws-elasticache');

      .. code-tab:: typescript

         import { ReplicationGroupReadEndPointPorts } from '@aws-cdk/aws-elasticache';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

ReplicationGroupReadEndPointPortsList
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: ReplicationGroupReadEndPointPortsList([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticache.ReplicationGroupReadEndPointPortsList;

      .. code-tab:: javascript

         const { ReplicationGroupReadEndPointPortsList } = require('@aws-cdk/aws-elasticache');

      .. code-tab:: typescript

         import { ReplicationGroupReadEndPointPortsList } from '@aws-cdk/aws-elasticache';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-elasticache.cloudformation

CacheClusterResource
~~~~~~~~~~~~~~~~~~~~

.. py:class:: CacheClusterResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticache.cloudformation.CacheClusterResource;

      .. code-tab:: javascript

         const { cloudformation.CacheClusterResource } = require('@aws-cdk/aws-elasticache');

      .. code-tab:: typescript

         import { cloudformation.CacheClusterResource } from '@aws-cdk/aws-elasticache';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``CacheClusterResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``CacheClusterResource``
   :type properties: :py:class:`~@aws-cdk/aws-elasticache.cloudformation.CacheClusterResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: cacheClusterConfigurationEndpointAddress

      :type: :py:class:`~@aws-cdk/aws-elasticache.CacheClusterConfigurationEndpointAddress` *(readonly)*


   .. py:attribute:: cacheClusterConfigurationEndpointPort

      :type: :py:class:`~@aws-cdk/aws-elasticache.CacheClusterConfigurationEndpointPort` *(readonly)*


   .. py:attribute:: cacheClusterRedisEndpointAddress

      :type: :py:class:`~@aws-cdk/aws-elasticache.CacheClusterRedisEndpointAddress` *(readonly)*


   .. py:attribute:: cacheClusterRedisEndpointPort

      :type: :py:class:`~@aws-cdk/aws-elasticache.CacheClusterRedisEndpointPort` *(readonly)*


CacheClusterResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: CacheClusterResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticache.cloudformation.CacheClusterResourceProps;

      .. code-tab:: javascript

         // cloudformation.CacheClusterResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.CacheClusterResourceProps } from '@aws-cdk/aws-elasticache';





   .. py:attribute:: cacheNodeType

      ``AWS::ElastiCache::CacheCluster.CacheNodeType``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticache-cache-cluster.html#cfn-elasticache-cachecluster-cachenodetype


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: engine

      ``AWS::ElastiCache::CacheCluster.Engine``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticache-cache-cluster.html#cfn-elasticache-cachecluster-engine


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: numCacheNodes

      ``AWS::ElastiCache::CacheCluster.NumCacheNodes``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticache-cache-cluster.html#cfn-elasticache-cachecluster-numcachenodes


      :type: number or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: autoMinorVersionUpgrade

      ``AWS::ElastiCache::CacheCluster.AutoMinorVersionUpgrade``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticache-cache-cluster.html#cfn-elasticache-cachecluster-autominorversionupgrade


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: azMode

      ``AWS::ElastiCache::CacheCluster.AZMode``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticache-cache-cluster.html#cfn-elasticache-cachecluster-azmode


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: cacheParameterGroupName

      ``AWS::ElastiCache::CacheCluster.CacheParameterGroupName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticache-cache-cluster.html#cfn-elasticache-cachecluster-cacheparametergroupname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: cacheSecurityGroupNames

      ``AWS::ElastiCache::CacheCluster.CacheSecurityGroupNames``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticache-cache-cluster.html#cfn-elasticache-cachecluster-cachesecuritygroupnames


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: cacheSubnetGroupName

      ``AWS::ElastiCache::CacheCluster.CacheSubnetGroupName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticache-cache-cluster.html#cfn-elasticache-cachecluster-cachesubnetgroupname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: clusterName

      ``AWS::ElastiCache::CacheCluster.ClusterName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticache-cache-cluster.html#cfn-elasticache-cachecluster-clustername


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: engineVersion

      ``AWS::ElastiCache::CacheCluster.EngineVersion``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticache-cache-cluster.html#cfn-elasticache-cachecluster-engineversion


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: notificationTopicArn

      ``AWS::ElastiCache::CacheCluster.NotificationTopicArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticache-cache-cluster.html#cfn-elasticache-cachecluster-notificationtopicarn


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: port

      ``AWS::ElastiCache::CacheCluster.Port``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticache-cache-cluster.html#cfn-elasticache-cachecluster-port


      :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: preferredAvailabilityZone

      ``AWS::ElastiCache::CacheCluster.PreferredAvailabilityZone``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticache-cache-cluster.html#cfn-elasticache-cachecluster-preferredavailabilityzone


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: preferredAvailabilityZones

      ``AWS::ElastiCache::CacheCluster.PreferredAvailabilityZones``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticache-cache-cluster.html#cfn-elasticache-cachecluster-preferredavailabilityzones


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: preferredMaintenanceWindow

      ``AWS::ElastiCache::CacheCluster.PreferredMaintenanceWindow``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticache-cache-cluster.html#cfn-elasticache-cachecluster-preferredmaintenancewindow


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: snapshotArns

      ``AWS::ElastiCache::CacheCluster.SnapshotArns``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticache-cache-cluster.html#cfn-elasticache-cachecluster-snapshotarns


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: snapshotName

      ``AWS::ElastiCache::CacheCluster.SnapshotName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticache-cache-cluster.html#cfn-elasticache-cachecluster-snapshotname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: snapshotRetentionLimit

      ``AWS::ElastiCache::CacheCluster.SnapshotRetentionLimit``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticache-cache-cluster.html#cfn-elasticache-cachecluster-snapshotretentionlimit


      :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: snapshotWindow

      ``AWS::ElastiCache::CacheCluster.SnapshotWindow``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticache-cache-cluster.html#cfn-elasticache-cachecluster-snapshotwindow


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: tags

      ``AWS::ElastiCache::CacheCluster.Tags``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticache-cache-cluster.html#cfn-elasticache-cachecluster-tags


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Tag` or undefined


   .. py:attribute:: vpcSecurityGroupIds

      ``AWS::ElastiCache::CacheCluster.VpcSecurityGroupIds``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticache-cache-cluster.html#cfn-elasticache-cachecluster-vpcsecuritygroupids


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


ParameterGroupResource
~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ParameterGroupResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticache.cloudformation.ParameterGroupResource;

      .. code-tab:: javascript

         const { cloudformation.ParameterGroupResource } = require('@aws-cdk/aws-elasticache');

      .. code-tab:: typescript

         import { cloudformation.ParameterGroupResource } from '@aws-cdk/aws-elasticache';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ParameterGroupResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ParameterGroupResource``
   :type properties: :py:class:`~@aws-cdk/aws-elasticache.cloudformation.ParameterGroupResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


ParameterGroupResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ParameterGroupResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticache.cloudformation.ParameterGroupResourceProps;

      .. code-tab:: javascript

         // cloudformation.ParameterGroupResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ParameterGroupResourceProps } from '@aws-cdk/aws-elasticache';





   .. py:attribute:: cacheParameterGroupFamily

      ``AWS::ElastiCache::ParameterGroup.CacheParameterGroupFamily``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticache-parameter-group.html#cfn-elasticache-parametergroup-cacheparametergroupfamily


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: description

      ``AWS::ElastiCache::ParameterGroup.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticache-parameter-group.html#cfn-elasticache-parametergroup-description


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: properties

      ``AWS::ElastiCache::ParameterGroup.Properties``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticache-parameter-group.html#cfn-elasticache-parametergroup-properties


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


ReplicationGroupResource
~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ReplicationGroupResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticache.cloudformation.ReplicationGroupResource;

      .. code-tab:: javascript

         const { cloudformation.ReplicationGroupResource } = require('@aws-cdk/aws-elasticache');

      .. code-tab:: typescript

         import { cloudformation.ReplicationGroupResource } from '@aws-cdk/aws-elasticache';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ReplicationGroupResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ReplicationGroupResource``
   :type properties: :py:class:`~@aws-cdk/aws-elasticache.cloudformation.ReplicationGroupResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: replicationGroupConfigurationEndPointAddress

      :type: :py:class:`~@aws-cdk/aws-elasticache.ReplicationGroupConfigurationEndPointAddress` *(readonly)*


   .. py:attribute:: replicationGroupConfigurationEndPointPort

      :type: :py:class:`~@aws-cdk/aws-elasticache.ReplicationGroupConfigurationEndPointPort` *(readonly)*


   .. py:attribute:: replicationGroupPrimaryEndPointAddress

      :type: :py:class:`~@aws-cdk/aws-elasticache.ReplicationGroupPrimaryEndPointAddress` *(readonly)*


   .. py:attribute:: replicationGroupPrimaryEndPointPort

      :type: :py:class:`~@aws-cdk/aws-elasticache.ReplicationGroupPrimaryEndPointPort` *(readonly)*


   .. py:attribute:: replicationGroupReadEndPointAddresses

      :type: :py:class:`~@aws-cdk/aws-elasticache.ReplicationGroupReadEndPointAddresses` *(readonly)*


   .. py:attribute:: replicationGroupReadEndPointAddressesList

      :type: :py:class:`~@aws-cdk/aws-elasticache.ReplicationGroupReadEndPointAddressesList` *(readonly)*


   .. py:attribute:: replicationGroupReadEndPointPorts

      :type: :py:class:`~@aws-cdk/aws-elasticache.ReplicationGroupReadEndPointPorts` *(readonly)*


   .. py:attribute:: replicationGroupReadEndPointPortsList

      :type: :py:class:`~@aws-cdk/aws-elasticache.ReplicationGroupReadEndPointPortsList` *(readonly)*

   .. py:class:: NodeGroupConfigurationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.elasticache.cloudformation.ReplicationGroupResource.NodeGroupConfigurationProperty;

         .. code-tab:: javascript

            // cloudformation.ReplicationGroupResource.NodeGroupConfigurationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ReplicationGroupResource.NodeGroupConfigurationProperty } from '@aws-cdk/aws-elasticache';





      .. py:attribute:: primaryAvailabilityZone

         ``ReplicationGroupResource.NodeGroupConfigurationProperty.PrimaryAvailabilityZone``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticache-replicationgroup-nodegroupconfiguration.html#cfn-elasticache-replicationgroup-nodegroupconfiguration-primaryavailabilityzone


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: replicaAvailabilityZones

         ``ReplicationGroupResource.NodeGroupConfigurationProperty.ReplicaAvailabilityZones``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticache-replicationgroup-nodegroupconfiguration.html#cfn-elasticache-replicationgroup-nodegroupconfiguration-replicaavailabilityzones


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: replicaCount

         ``ReplicationGroupResource.NodeGroupConfigurationProperty.ReplicaCount``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticache-replicationgroup-nodegroupconfiguration.html#cfn-elasticache-replicationgroup-nodegroupconfiguration-replicacount


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: slots

         ``ReplicationGroupResource.NodeGroupConfigurationProperty.Slots``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticache-replicationgroup-nodegroupconfiguration.html#cfn-elasticache-replicationgroup-nodegroupconfiguration-slots


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



ReplicationGroupResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ReplicationGroupResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticache.cloudformation.ReplicationGroupResourceProps;

      .. code-tab:: javascript

         // cloudformation.ReplicationGroupResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ReplicationGroupResourceProps } from '@aws-cdk/aws-elasticache';





   .. py:attribute:: replicationGroupDescription

      ``AWS::ElastiCache::ReplicationGroup.ReplicationGroupDescription``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticache-replicationgroup.html#cfn-elasticache-replicationgroup-replicationgroupdescription


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: atRestEncryptionEnabled

      ``AWS::ElastiCache::ReplicationGroup.AtRestEncryptionEnabled``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticache-replicationgroup.html#cfn-elasticache-replicationgroup-atrestencryptionenabled


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: authToken

      ``AWS::ElastiCache::ReplicationGroup.AuthToken``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticache-replicationgroup.html#cfn-elasticache-replicationgroup-authtoken


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: automaticFailoverEnabled

      ``AWS::ElastiCache::ReplicationGroup.AutomaticFailoverEnabled``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticache-replicationgroup.html#cfn-elasticache-replicationgroup-automaticfailoverenabled


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: autoMinorVersionUpgrade

      ``AWS::ElastiCache::ReplicationGroup.AutoMinorVersionUpgrade``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticache-replicationgroup.html#cfn-elasticache-replicationgroup-autominorversionupgrade


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: cacheNodeType

      ``AWS::ElastiCache::ReplicationGroup.CacheNodeType``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticache-replicationgroup.html#cfn-elasticache-replicationgroup-cachenodetype


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: cacheParameterGroupName

      ``AWS::ElastiCache::ReplicationGroup.CacheParameterGroupName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticache-replicationgroup.html#cfn-elasticache-replicationgroup-cacheparametergroupname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: cacheSecurityGroupNames

      ``AWS::ElastiCache::ReplicationGroup.CacheSecurityGroupNames``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticache-replicationgroup.html#cfn-elasticache-replicationgroup-cachesecuritygroupnames


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: cacheSubnetGroupName

      ``AWS::ElastiCache::ReplicationGroup.CacheSubnetGroupName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticache-replicationgroup.html#cfn-elasticache-replicationgroup-cachesubnetgroupname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: engine

      ``AWS::ElastiCache::ReplicationGroup.Engine``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticache-replicationgroup.html#cfn-elasticache-replicationgroup-engine


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: engineVersion

      ``AWS::ElastiCache::ReplicationGroup.EngineVersion``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticache-replicationgroup.html#cfn-elasticache-replicationgroup-engineversion


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: nodeGroupConfiguration

      ``AWS::ElastiCache::ReplicationGroup.NodeGroupConfiguration``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticache-replicationgroup.html#cfn-elasticache-replicationgroup-nodegroupconfiguration


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-elasticache.cloudformation.ReplicationGroupResource.NodeGroupConfigurationProperty` or undefined


   .. py:attribute:: notificationTopicArn

      ``AWS::ElastiCache::ReplicationGroup.NotificationTopicArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticache-replicationgroup.html#cfn-elasticache-replicationgroup-notificationtopicarn


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: numCacheClusters

      ``AWS::ElastiCache::ReplicationGroup.NumCacheClusters``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticache-replicationgroup.html#cfn-elasticache-replicationgroup-numcacheclusters


      :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: numNodeGroups

      ``AWS::ElastiCache::ReplicationGroup.NumNodeGroups``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticache-replicationgroup.html#cfn-elasticache-replicationgroup-numnodegroups


      :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: port

      ``AWS::ElastiCache::ReplicationGroup.Port``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticache-replicationgroup.html#cfn-elasticache-replicationgroup-port


      :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: preferredCacheClusterAZs

      ``AWS::ElastiCache::ReplicationGroup.PreferredCacheClusterAZs``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticache-replicationgroup.html#cfn-elasticache-replicationgroup-preferredcacheclusterazs


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: preferredMaintenanceWindow

      ``AWS::ElastiCache::ReplicationGroup.PreferredMaintenanceWindow``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticache-replicationgroup.html#cfn-elasticache-replicationgroup-preferredmaintenancewindow


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: primaryClusterId

      ``AWS::ElastiCache::ReplicationGroup.PrimaryClusterId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticache-replicationgroup.html#cfn-elasticache-replicationgroup-primaryclusterid


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: replicasPerNodeGroup

      ``AWS::ElastiCache::ReplicationGroup.ReplicasPerNodeGroup``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticache-replicationgroup.html#cfn-elasticache-replicationgroup-replicaspernodegroup


      :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: replicationGroupId

      ``AWS::ElastiCache::ReplicationGroup.ReplicationGroupId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticache-replicationgroup.html#cfn-elasticache-replicationgroup-replicationgroupid


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: securityGroupIds

      ``AWS::ElastiCache::ReplicationGroup.SecurityGroupIds``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticache-replicationgroup.html#cfn-elasticache-replicationgroup-securitygroupids


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: snapshotArns

      ``AWS::ElastiCache::ReplicationGroup.SnapshotArns``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticache-replicationgroup.html#cfn-elasticache-replicationgroup-snapshotarns


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: snapshotName

      ``AWS::ElastiCache::ReplicationGroup.SnapshotName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticache-replicationgroup.html#cfn-elasticache-replicationgroup-snapshotname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: snapshotRetentionLimit

      ``AWS::ElastiCache::ReplicationGroup.SnapshotRetentionLimit``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticache-replicationgroup.html#cfn-elasticache-replicationgroup-snapshotretentionlimit


      :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: snapshottingClusterId

      ``AWS::ElastiCache::ReplicationGroup.SnapshottingClusterId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticache-replicationgroup.html#cfn-elasticache-replicationgroup-snapshottingclusterid


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: snapshotWindow

      ``AWS::ElastiCache::ReplicationGroup.SnapshotWindow``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticache-replicationgroup.html#cfn-elasticache-replicationgroup-snapshotwindow


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: tags

      ``AWS::ElastiCache::ReplicationGroup.Tags``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticache-replicationgroup.html#cfn-elasticache-replicationgroup-tags


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Tag` or undefined


   .. py:attribute:: transitEncryptionEnabled

      ``AWS::ElastiCache::ReplicationGroup.TransitEncryptionEnabled``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-elasticache-replicationgroup.html#cfn-elasticache-replicationgroup-transitencryptionenabled


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


SecurityGroupIngressResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: SecurityGroupIngressResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticache.cloudformation.SecurityGroupIngressResource;

      .. code-tab:: javascript

         const { cloudformation.SecurityGroupIngressResource } = require('@aws-cdk/aws-elasticache');

      .. code-tab:: typescript

         import { cloudformation.SecurityGroupIngressResource } from '@aws-cdk/aws-elasticache';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``SecurityGroupIngressResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``SecurityGroupIngressResource``
   :type properties: :py:class:`~@aws-cdk/aws-elasticache.cloudformation.SecurityGroupIngressResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


SecurityGroupIngressResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: SecurityGroupIngressResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticache.cloudformation.SecurityGroupIngressResourceProps;

      .. code-tab:: javascript

         // cloudformation.SecurityGroupIngressResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.SecurityGroupIngressResourceProps } from '@aws-cdk/aws-elasticache';





   .. py:attribute:: cacheSecurityGroupName

      ``AWS::ElastiCache::SecurityGroupIngress.CacheSecurityGroupName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticache-security-group-ingress.html#cfn-elasticache-securitygroupingress-cachesecuritygroupname


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: ec2SecurityGroupName

      ``AWS::ElastiCache::SecurityGroupIngress.EC2SecurityGroupName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticache-security-group-ingress.html#cfn-elasticache-securitygroupingress-ec2securitygroupname


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: ec2SecurityGroupOwnerId

      ``AWS::ElastiCache::SecurityGroupIngress.EC2SecurityGroupOwnerId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticache-security-group-ingress.html#cfn-elasticache-securitygroupingress-ec2securitygroupownerid


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


SecurityGroupResource
~~~~~~~~~~~~~~~~~~~~~

.. py:class:: SecurityGroupResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticache.cloudformation.SecurityGroupResource;

      .. code-tab:: javascript

         const { cloudformation.SecurityGroupResource } = require('@aws-cdk/aws-elasticache');

      .. code-tab:: typescript

         import { cloudformation.SecurityGroupResource } from '@aws-cdk/aws-elasticache';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``SecurityGroupResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``SecurityGroupResource``
   :type properties: :py:class:`~@aws-cdk/aws-elasticache.cloudformation.SecurityGroupResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


SecurityGroupResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: SecurityGroupResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticache.cloudformation.SecurityGroupResourceProps;

      .. code-tab:: javascript

         // cloudformation.SecurityGroupResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.SecurityGroupResourceProps } from '@aws-cdk/aws-elasticache';





   .. py:attribute:: description

      ``AWS::ElastiCache::SecurityGroup.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticache-security-group.html#cfn-elasticache-securitygroup-description


      :type: string or :py:class:`@aws-cdk/cdk.Token`


SubnetGroupResource
~~~~~~~~~~~~~~~~~~~

.. py:class:: SubnetGroupResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticache.cloudformation.SubnetGroupResource;

      .. code-tab:: javascript

         const { cloudformation.SubnetGroupResource } = require('@aws-cdk/aws-elasticache');

      .. code-tab:: typescript

         import { cloudformation.SubnetGroupResource } from '@aws-cdk/aws-elasticache';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``SubnetGroupResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``SubnetGroupResource``
   :type properties: :py:class:`~@aws-cdk/aws-elasticache.cloudformation.SubnetGroupResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


SubnetGroupResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: SubnetGroupResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.elasticache.cloudformation.SubnetGroupResourceProps;

      .. code-tab:: javascript

         // cloudformation.SubnetGroupResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.SubnetGroupResourceProps } from '@aws-cdk/aws-elasticache';





   .. py:attribute:: description

      ``AWS::ElastiCache::SubnetGroup.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticache-subnetgroup.html#cfn-elasticache-subnetgroup-description


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: subnetIds

      ``AWS::ElastiCache::SubnetGroup.SubnetIds``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticache-subnetgroup.html#cfn-elasticache-subnetgroup-subnetids


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: cacheSubnetGroupName

      ``AWS::ElastiCache::SubnetGroup.CacheSubnetGroupName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-elasticache-subnetgroup.html#cfn-elasticache-subnetgroup-cachesubnetgroupname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



.. py:currentmodule:: @aws-cdk/aws-elasticache

